adjusting images folder

--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -13,7 +13,7 @@
     
     <!-- Added logo container -->
     <div class="logo-container">
-      <img src="../logo-semBG.png" alt="Melody Logo" class="logo">
+      <img src="../images/logo-semBG.png" alt="Melody Logo" class="logo">
     </div>
     
     <!-- Spacer to push footer to bottom -->
