--- a/interface-web/homePage/index.html
+++ b/interface-web/homePage/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Melody</title>
+  <link rel="stylesheet" href="../common-style/common.css">
   <link rel="stylesheet" href="index.css">
 </head>
 
