redirecting working and beginning of backend

--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Creation Mode - Melody</title>
-  <link rel="stylesheet" href="../common-style/common.css">
-  <link rel="stylesheet" href="creationMode.css">
+  <link rel="stylesheet" href="/static/common-style/common.css">
+  <link rel="stylesheet" href="/static/creationMode/creationMode.css">
 </head>
 
 <body>
@@ -43,6 +43,6 @@
     </footer>
   </div>
 
-  <script src="creationMode.js"></script>
+  <script src="/static/creationMode/creationMode.js"></script>
 </body>
 </html>
