--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Identify the Note</title>
-  <link rel="stylesheet" href="../common-style/common.css">
-  <link rel="stylesheet" href="identifyNote.css">
+  <link rel="stylesheet" href="/static/common-style/common.css">
+  <link rel="stylesheet" href="/static/identifyNote/identifyNote.css">
 </head>
 
 <body>
@@ -45,6 +45,6 @@
     </footer>
   </div>
 
-  <script src="identifyNote.js"></script>
+  <script src="/static/identifyNote/identifyNote.js"></script>
 </body>
 </html>
