--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hear the Note</title>
-  <link rel="stylesheet" href="../common-style/common.css">
-  <link rel="stylesheet" href="hearNote.css">
+  <link rel="stylesheet" href="/static/common-style/common.css">
+  <link rel="stylesheet" href="/static/hearNote/hearNote.css">
 </head>
 
 <body>
@@ -48,6 +48,6 @@
     </footer>
   </div>
 
-  <script src="hearNote.js"></script>
+  <script src="/static/hearNote/hearNote.js"></script>
 </body>
 </html>
