--- a/interface-web/homePage/index.html
+++ b/interface-web/homePage/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Melody</title>
-  <link rel="stylesheet" href="../common-style/common.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/static/common-style/common.css" />
+  <link rel="stylesheet" href="/static/homePage/index.css" />
 </head>
 
 <body>
@@ -35,6 +35,6 @@
     <div class="footer-text">Melody App v1.0</div>
   </div>
 
-  <script src="index.js"></script>
+  <script src="/static/homePage/index.js"></script>
 </body>
 </html>
