--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -47,7 +47,7 @@
       <div class="footer-text">Hear the Note</div>
     </footer>
   </div>
-
+  <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/hearNote/hearNote.js"></script>
 </body>
 </html>
