--- a/interface-web/homePage/index.html
+++ b/interface-web/homePage/index.html
@@ -35,6 +35,7 @@
     <div class="footer-text">Melody App v1.0</div>
   </div>
 
+  <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/homePage/index.js"></script>
 </body>
 </html>
