--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -45,6 +45,7 @@
     </footer>
   </div>
 
+  <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/identifyNote/identifyNote.js"></script>
 </body>
 </html>
