--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hear the Note</title>
+  <title>Escute a Nota</title>
   <link rel="stylesheet" href="/static/common-style/common.css">
   <link rel="stylesheet" href="/static/hearNote/hearNote.css">
 </head>
@@ -24,12 +24,12 @@
     <footer>
       <div class="playback-controls">
         <button class="play-button" onclick="play()">▶ Play</button>
-        <button class="stop-button" onclick="stop()">🚫 Stop</button>
+        <button class="stop-button" onclick="stop()">🚫 Parar</button>
       </div>
 
       <div class="music-select-container">
         <select id="musicSelect" onchange="selectMusic()">
-          <option value="none" disabled selected>Select Music</option>
+          <option value="none" disabled selected>Selecione a música</option>
           <option value="Musica 1">Musica 1</option>
           <option value="Musica 2">Musica 2</option>
           <option value="Musica 3">Musica 3</option>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="footer-text">Hear the Note</div>
+      <div class="footer-text">Escute a Nota</div>
     </footer>
   </div>
   <script src="/static/common-style/bridge.js" defer></script>
