--- a/interface-web/homePage/index.html
+++ b/interface-web/homePage/index.html
@@ -13,9 +13,9 @@
     <h1 class="title">Melody</h1>
     
     <div class="menu-container">
-      <button class="menu-button" onclick="navigateTo('creation')">Creation Mode</button>
-      <button class="menu-button" onclick="navigateTo('hear')">Hear the Note</button>
-      <button class="menu-button" onclick="navigateTo('identify')">Identify the Note</button>
+      <button class="menu-button" onclick="navigateTo('creation')">Modo de Criação</button>
+      <button class="menu-button" onclick="navigateTo('hear')">Escute a Nota</button>
+      <button class="menu-button" onclick="navigateTo('identify')">Identifique a Nota</button>
     </div>
     
     <button class="help-button" onclick="showTutorial()">?</button>
@@ -24,9 +24,9 @@
       <div class="tutorial-container">
         <h2 class="tutorial-title">Melody</h2>
         <p class="tutorial-text">
-          <strong>Creation Mode:</strong> Crie músicas onde a imaginação da criança a levar<br><br>
-          <strong>Hear the Note:</strong> Assimile a nota ouvida com sua representação na partitura. No final, escute a melodia.<br><br>
-          <strong>Identify the Note:</strong> Assimile a nota escrita com sua representação na partitura. No final, escute a melodia.
+          <strong>Modo de Criação:</strong> Crie músicas onde a imaginação da criança a levar<br><br>
+          <strong>Escute a Nota:</strong> Assimile a nota ouvida com sua representação na partitura. No final, escute a melodia.<br><br>
+          <strong>Identifique a Nota:</strong> Assimile a nota escrita com sua representação na partitura. No final, escute a melodia.
         </p>
         <button class="tutorial-close" onclick="hideTutorial()">Entendi!</button>
       </div>
