--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Identify the Note</title>
+  <title>Identifique a Nota</title>
   <link rel="stylesheet" href="/static/common-style/common.css">
   <link rel="stylesheet" href="/static/identifyNote/identifyNote.css">
 </head>
@@ -26,7 +26,7 @@
 
       <div class="music-select-container">
         <select id="musicSelect" onchange="selectMusic()">
-          <option value="none" disabled selected>Select Music</option>
+          <option value="none" disabled selected>Selecione a Música</option>
           <option value="Musica 1">Musica 1</option>
           <option value="Musica 2">Musica 2</option>
           <option value="Musica 3">Musica 3</option>
