explicando como rodar

--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -23,7 +23,7 @@
     <footer>
       <div class="playback-controls">
         <button id="playBtn">▶ Play</button>
-        <button id="stopBtn">🚫 Stop</button>
+        <button id="stopBtn">🚫 Parar</button>
       </div>
 
       <div class="controls">
