--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -21,7 +21,7 @@
     <footer>
       <div class="playback-controls">
         <button class="play-button" onclick="play()">▶ Play</button>
-        <button class="stop-button" onclick="stop()">🚫 Stop</button>
+        <button class="stop-button" onclick="stop()">🚫 Parar</button>
       </div>
 
       <div class="music-select-container">
