accessbility mode and same page for all clients

--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -43,6 +43,7 @@
     </footer>
   </div>
 
+  <script>window.__PAGE_NAME__ = "creation";</script>
   <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/creationMode/creationMode.js"></script>
 </body>
