--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -12,13 +12,11 @@
   <div class="screen">
     <button class="back-button" onclick="goBack()">← Back</button>
     
-    <!-- Musical note display with play button -->
     <div class="note-container">
       <div class="note-display">C#</div>
       <button class="play-note-btn" id="playNoteBtn">▶</button>
     </div>
     
-    <!-- Spacer to push footer to bottom -->
     <div class="content-spacer"></div>
 
     <footer>
@@ -47,6 +45,8 @@
       <div class="footer-text">Escute a Nota</div>
     </footer>
   </div>
+
+  <script>window.__PAGE_NAME__ = "hear";</script>
   <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/hearNote/hearNote.js"></script>
 </body>
