--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -12,10 +12,7 @@
   <div class="screen">
     <button class="back-button" onclick="goBack()">← Back</button>
     
-    <!-- Musical note display -->
     <div class="note-display">C#</div>
-    
-    <!-- Spacer to push footer to bottom -->
     <div class="content-spacer"></div>
 
     <footer>
@@ -45,6 +42,7 @@
     </footer>
   </div>
 
+  <script>window.__PAGE_NAME__ = "identify";</script>
   <script src="/static/common-style/bridge.js" defer></script>
   <script src="/static/identifyNote/identifyNote.js"></script>
 </body>
