resto em portugues

--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="screen">
-    <button class="back-button" onclick="goBack()">← Back</button>
+    <button class="back-button" onclick="goBack()">← Voltar</button>
     
     <!-- Added logo container -->
     <div class="logo-container">
@@ -22,8 +22,8 @@
 
     <footer>
       <div class="playback-controls">
-        <button id="playBtn">▶ Play</button>
-        <button id="stopBtn">🚫 Parar</button>
+        <button class="play-button" onclick="play()">Play ▶</button>
+        <button class="stop-button" onclick="stop()">Parar 🚫 </button>
       </div>
 
       <div class="controls">
