--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="screen">
-    <button class="back-button" onclick="goBack()">← Back</button>
+    <button class="back-button" onclick="goBack()">← Voltar</button>
     
     <div class="note-container">
       <div class="note-display">C#</div>
@@ -21,8 +21,8 @@
 
     <footer>
       <div class="playback-controls">
-        <button class="play-button" onclick="play()">▶ Play</button>
-        <button class="stop-button" onclick="stop()">🚫 Parar</button>
+        <button class="play-button" onclick="play()">Play ▶</button>
+        <button class="stop-button" onclick="stop()">Parar 🚫 </button>
       </div>
 
       <div class="music-select-container">
