--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -10,15 +10,14 @@
 
 <body>
   <div class="screen">
-    <button class="back-button" onclick="goBack()">← Back</button>
-    
+    <button class="back-button" onclick="goBack()">← Voltar</button>
     <div class="note-display">C#</div>
     <div class="content-spacer"></div>
 
     <footer>
       <div class="playback-controls">
-        <button class="play-button" onclick="play()">▶ Play</button>
-        <button class="stop-button" onclick="stop()">🚫 Parar</button>
+        <button class="play-button" onclick="play()">Play ▶</button>
+        <button class="stop-button" onclick="stop()">Parar 🚫 </button>
       </div>
 
       <div class="music-select-container">
