added hear note button, added custom note

--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -11,7 +11,7 @@
 <body>
   <div class="screen">
     <button class="back-button" onclick="goBack()">← Voltar</button>
-    <div class="note-display">C#</div>
+    <div class="note-display" id="currentNoteDisplay">C#</div> 
     <div class="content-spacer"></div>
 
     <footer>
@@ -23,7 +23,7 @@
       <div class="music-select-container">
         <select id="musicSelect" onchange="selectMusic()">
           <option value="none" disabled selected>Selecione a Música</option>
-          <option value="Musica 1">Musica 1</option>
+          <option value="Ovelha Preta">Ovelha Preta</option>
           <option value="Musica 2">Musica 2</option>
           <option value="Musica 3">Musica 3</option>
         </select>
