--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -13,7 +13,7 @@
     <button class="back-button" onclick="goBack()">← Voltar</button>
     
     <div class="note-container">
-      <div class="note-display">C#</div>
+      <div class="note-display" id="currentNoteDisplay">C#</div> 
       <button class="play-note-btn" id="playNoteBtn">▶</button>
     </div>
     
@@ -28,7 +28,7 @@
       <div class="music-select-container">
         <select id="musicSelect" onchange="selectMusic()">
           <option value="none" disabled selected>Selecione a música</option>
-          <option value="Musica 1">Musica 1</option>
+          <option value="Ovelha Preta">Ovelha Preta</option>
           <option value="Musica 2">Musica 2</option>
           <option value="Musica 3">Musica 3</option>
         </select>
