--- a/interface-web/creationMode/creationMode.html
+++ b/interface-web/creationMode/creationMode.html
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="footer-text">Creation Mode</div>
+      <div class="footer-text">Modo de Criação</div>
     </footer>
   </div>
 
