--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="footer-text">Identify the Note</div>
+      <div class="footer-text">Identifique a Nota</div>
     </footer>
   </div>
 
