--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -24,8 +24,8 @@
         <select id="musicSelect" onchange="selectMusic()">
           <option value="none" disabled selected>Selecione a Música</option>
           <option value="Ovelha Preta">Ovelha Preta</option>
-          <option value="Musica 2">Musica 2</option>
-          <option value="Musica 3">Musica 3</option>
+          <option value="Ode Alegria">Ode à Alegria</option>
+          <option value="Canon in D">Canon in D</option>
         </select>
       </div>
 
