added duration to page

--- a/interface-web/hearNote/hearNote.html
+++ b/interface-web/hearNote/hearNote.html
@@ -16,6 +16,9 @@
       <div class="note-display" id="currentNoteDisplay">C#</div> 
       <button class="play-note-btn" id="playNoteBtn">▶</button>
     </div>
+    <div class="note-duration">
+      <div class="duration-display" id="currentDurationDisplay">-</div> <div class="content-spacer"></div>
+    </div>
     
     <div class="content-spacer"></div>
 
