--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -11,7 +11,8 @@
 <body>
   <div class="screen">
     <button class="back-button" onclick="goBack()">← Voltar</button>
-    <div class="note-display" id="currentNoteDisplay">C#</div> 
+    <div class="note-display" id="currentNoteDisplay"></div> 
+    <div class="duration-display" id="currentDurationDisplay">-</div> <div class="content-spacer"></div>
     <div class="content-spacer"></div>
 
     <footer>
