--- a/interface-web/identifyNote/identifyNote.html
+++ b/interface-web/identifyNote/identifyNote.html
@@ -24,7 +24,7 @@
       <div class="music-select-container">
         <select id="musicSelect" onchange="selectMusic()">
           <option value="none" disabled selected>Selecione a Música</option>
-          <option value="Ovelha Preta">Ovelha Preta</option>
+          <option value="Ovelha Preta">Brilha Brilha Estrelinha</option>
           <option value="Ode Alegria">Ode à Alegria</option>
           <option value="Canon in D">Canon in D</option>
         </select>
